#7 - Fix spacing among articles on featured section

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -55,7 +55,6 @@
       border-top: 0;
       margin-top: 0;
       padding-top: 0;
-      margin-bottom: 40px;
     }
   }
 
@@ -69,6 +68,10 @@
     flex-flow: row wrap;
     justify-content: space-around;
     max-width: 70%;
+  }
+
+  article{
+    margin-bottom: 40px;
   }
 }
 
